--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpaceCal-Fr - Newsletters</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-        .pdf-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .pdf-list li {
-            background-color: #f4f4f4;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .pdf-list a {
-            text-decoration: none;
-            color: #0066cc;
-        }
-        .pdf-list a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <h1>SpaceCal-Fr Newsletters</h1>
-    
-    <h2>Newsletters 2025</h2>
-    <ul class="pdf-list">
-        <li><a href="docs/newsletters/2025-10/SpaceCal-Fr_Newsletter_20251006.md">Newsletter du 06 octobre (Markdown)</a></li>
-        <li><a href="docs/newsletters/2025-10/SpaceCal-Fr_Newsletter_20251006.md.pdf">Newsletter du 06 octobre (PDF)</a></li>
-    </ul>
+!DOCTYPE html> html lang='fr'> head> meta charset='UTF-8'> title>SpaceCal-Fr /title> style>
+        body { 
+            font-family: Arial, sans-serif; 
+            line-height: 1.6; 
+            max-width: 800px; 
+            margin: 0 auto; 
+            padding: 20px; 
+        } /style> /head> body>
+# 🚀 SpaceCal-fr.github.io - Newsletter des événements du spatial en France
 
-    <footer>
-        <p>© 2025 SpaceCal-Fr. Tous droits réservés.</p>
-    </footer>
-</body>
-</html>
+Bienvenue sur le dépôt officiel de **SpaceCal-Fr**, le site qui répertorie gratuitement tous les événements professionnels et grands publics du spatial se déroulant en France meétropolitaine et outre-mer.
+
+---
+
+## 📡 À propos
+Ce dépôt contient une archive des **newsletters** publiées chaque dimanche (au format pdf et markdown) résumant les événements à venir dans le domaine spatial.
+
+---
+
+## 🗂️ Structure/Organisation
+
+Les lettres hebdomaidaires sont organisées **par mois** dans le dossier [newsletters](https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters).
+
+<ins>Chaque dossier contient :</ins>
+
+- une version PDF prête à partager.
+- une version Markdown pour une lecture rapide.
+
+
+## 📥 Comment télécharger les newsletters ?
+Les fichiers PDF et Markdown sont hébergés via **GitHub Pages** et accessibles directement par ici
+👉 [Lien vers les newsletters](https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters)
+
+## 🌟 Contribuer
+Les contributions sont les bienvenues ! Ouvrez une issue ou une pull request pour :
+
+- proposer des améliorations ;
+- signaler des erreurs ;
+- ajouter des fonctionnalités.
+
+
+## 📅 Calendrier
+
+Publication : tous les dimanches soirs.  
+Source : les événements sont extraits du site 👉 https://www.spacecal.fr.
+
+
+ /body> /html>
