--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
-!DOCTYPE html> html lang='fr'> head> meta charset='UTF-8'> title>SpaceCal-Fr /title> style>
-        body { 
-            font-family: Arial, sans-serif; 
-            line-height: 1.6; 
-            max-width: 800px; 
-            margin: 0 auto; 
-            padding: 20px; 
-        } /style> /head> body>
-# 🚀 SpaceCal-fr.github.io - Newsletter des événements du spatial en France
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>SpaceCal-Fr</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>🚀 SpaceCal-fr.github.io - Newsletter des événements du spatial en France</h1>
+    <p>Bienvenue sur le dépôt officiel de <strong>SpaceCal-Fr</strong>, le site qui répertorie gratuitement tous les événements professionnels et grands publics du spatial se déroulant en France métropolitaine et outre-mer.</p>
 
-Bienvenue sur le dépôt officiel de **SpaceCal-Fr**, le site qui répertorie gratuitement tous les événements professionnels et grands publics du spatial se déroulant en France meétropolitaine et outre-mer.
+    <h2>📡 À propos</h2>
+    <p>Ce dépôt contient une archive des <strong>newsletters</strong> publiées chaque dimanche (au format pdf et markdown) résumant les événements à venir dans le domaine spatial.</p>
 
----
+    <h2>🗂️ Structure/Organisation</h2>
+    <p>Les lettres hebdomadaires sont organisées <strong>par mois</strong> dans le dossier <a href="https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters">newsletters</a>.</p>
+    <p>Chaque dossier contient :</p>
+    <ul>
+        <li>une version PDF prête à partager ;</li>
+        <li>une version Markdown pour une lecture rapide.</li>
+    </ul>
 
-## 📡 À propos
-Ce dépôt contient une archive des **newsletters** publiées chaque dimanche (au format pdf et markdown) résumant les événements à venir dans le domaine spatial.
+    <h2>📥 Comment télécharger les newsletters ?</h2>
+    <p>Les fichiers PDF et Markdown sont hébergés via <strong>GitHub Pages</strong> et accessibles directement par ici :</p>
+    <p>👉 <a href="https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters">Lien vers les newsletters</a></p>
 
----
+    <h2>🌟 Contribuer</h2>
+    <p>Les contributions sont les bienvenues ! Ouvrez une issue ou une pull request pour :</p>
+    <ul>
+        <li>proposer des améliorations ;</li>
+        <li>signaler des erreurs ;</li>
+        <li>ajouter des fonctionnalités.</li>
+    </ul>
 
-## 🗂️ Structure/Organisation
-
-Les lettres hebdomaidaires sont organisées **par mois** dans le dossier [newsletters](https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters).
-
-<ins>Chaque dossier contient :</ins>
-
-- une version PDF prête à partager.
-- une version Markdown pour une lecture rapide.
-
-
-## 📥 Comment télécharger les newsletters ?
-Les fichiers PDF et Markdown sont hébergés via **GitHub Pages** et accessibles directement par ici
-👉 [Lien vers les newsletters](https://github.com/SpaceCal-Fr/SpaceCal-Fr.github.io/tree/ba3b93c967085e9f70db8f9889a605459dd4c07c/docs/newsletters)
-
-## 🌟 Contribuer
-Les contributions sont les bienvenues ! Ouvrez une issue ou une pull request pour :
-
-- proposer des améliorations ;
-- signaler des erreurs ;
-- ajouter des fonctionnalités.
-
-
-## 📅 Calendrier
-
-Publication : tous les dimanches soirs.  
-Source : les événements sont extraits du site 👉 https://www.spacecal.fr.
-
-
- /body> /html>
+    <h2>📅 Calendrier</h2>
+    <p>Publication : tous les dimanches soirs.</p>
+    <p>Source : les événements sont extraits du site 👉 <a href="https://www.spacecal.fr">https://www.spacecal.fr</a>.</p>
+</body>
+</html>
